--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,8 @@ Build-Depends:
  pkg-config,
  python-docutils,
  xsltproc,
+ libjansson-dev,
+ liburcu-dev,
 Vcs-Browser: http://git.debian.org/?p=pkg-varnish/pkg-varnish.git;a=summary
 Vcs-Git: git://git.debian.org/pkg-varnish/pkg-varnish.git
 Homepage: http://varnish-cache.org/
@@ -27,7 +29,7 @@ Standards-Version: 3.9.3
 
 Package: varnish
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, gcc ( >= 3.3), libc6-dev | libc6.1-dev | libc-dev, adduser
+Depends: ${shlibs:Depends}, ${misc:Depends}, gcc ( >= 3.3), libc6-dev | libc6.1-dev | libc-dev, adduser, libjansson4, liburcu1
 Suggests: varnish-doc
 Replaces: libvarnishapi1 (<< 3.0.0-5)
 Description: state of the art, high-performance web accelerator
