netmapper patches + associated control changes
Change-Id: Ib92e5daeb953e470fb0143fd8059c33030cdfa52

--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,8 @@ Build-Depends:
  pkg-config,
  python-docutils,
  xsltproc,
+ libjansson-dev,
+ liburcu-dev,
 Vcs-Browser: http://git.debian.org/?p=pkg-varnish/pkg-varnish.git;a=summary
 Vcs-Git: git://git.debian.org/pkg-varnish/pkg-varnish.git
 Homepage: http://varnish-cache.org/
