Fix issue with sphinx html + git-buildpackage
The upstream debian packaging stuff expects to work
  from a baseline of "make dist", whereas we're working
  directly from an "upstream" branch, so we need to
  do "make html" in doc/sphinx to make up the difference

Change-Id: Icadc81a58e8bedf1532dbeda5744b1af379ffdf4

--- a/debian/rules
+++ b/debian/rules
@@ -50,6 +50,7 @@ override_dh_install:
 		$(CURDIR)/debian/varnish/usr/share/varnish/reload-vcl
 
 override_dh_installdocs:
+	make -C doc/sphinx html
 	dh_installdocs
 	@ # Use the packaged javascript libraries
 	if [ -d $(CURDIR)/debian/varnish-doc ]; then \
